# study

./: .gitignore
Algorithm/DynamicProgramming/Floyd/: a.out  floyd.cpp  graph  prg
Algorithm/DynamicProgramming/MatChainMul/: a.out  input  matChainMul.cpp
Algorithm/DynamicProgramming/OptimalBST/: .optBst.cpp.swp  input  input1  optBst.cpp
Algorithm/DynamicProgramming/Salesman/: input1  input2  input3  salesman.cpp
NeuralNetwork/: .gitignore  CMakeLists.txt  run.sh
NeuralNetwork/DB/: dbmaker.py  run.sh
NeuralNetwork/config/: cpxnum.cfg  cpxnum1.cfg
NeuralNetwork/exe/: a.out
NeuralNetwork/source/: BackProp.cpp  BackProp.hpp  Train.cpp  Train.hpp  cpxnum.cpp
NeuralNetwork/train/: \  cpxnum.train
